--- a/Cargo.toml
+++ b/Cargo.toml
@@ -61,6 +61,9 @@ sysinfo = "0.30"
 # Async task queue
 tokio-util = "0.7"
 
+# Regular expressions
+regex = "1.0"
+
 [dev-dependencies]
 tokio-test = "0.4"
 criterion = "0.5"
