--- a/examples/config.yaml
+++ b/examples/config.yaml
@@ -59,6 +59,9 @@ styles:
       italic: false
     background_color: "#f5f5f5"
     border: true
+    preserve_line_breaks: true    # Preserve original line breaks in code blocks
+    line_spacing: 1.0             # Line spacing within code blocks
+    paragraph_spacing: 6.0        # Spacing between code block paragraphs
   
   table:
     font:
